--- a/frontend/css/makurspace.css
+++ b/frontend/css/makurspace.css
@@ -31,6 +31,12 @@ footer {
   bottom: 0;
   width: 100%;
   /* Height of the footer*/ 
-  height: 40px;
+  height: 20px;
   background: grey;
+}
+.pb-5, .py-5 {
+  padding-bottom: 2rem !important;
+}
+.pt-5, .py-5 {
+  padding-top: 1rem !important;
 }
