--- a/frontend/css/makurspace.css
+++ b/frontend/css/makurspace.css
@@ -4,10 +4,12 @@
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-logomodern-business-nav/blob/master/LICENSE)
  */
 body {
-  padding-top: 56px;
+  background-color: #333333
 }
 
 .carousel-item {
+  margin-top: 50px;
+  width: 100%;
   height: 65vh;
   min-height: 300px;
   background: no-repeat center center scroll;
@@ -15,6 +17,15 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+.container {
+  color: white;
+}
+
+.card {
+  background-color: #333333;
+  color: white;
 }
 
 .portfolio-item {
