--- a/static/css/mus-nav.css
+++ b/static/css/mus-nav.css
@@ -3,3 +3,23 @@
     left: 50%;
     transform: translateX(-50%);
 }
+
+.bg-dark {
+    background-color: #151515 !important;
+}
+
+.form-control {
+	display: block;
+	width: 100%;
+	height: calc(1.5em + .75rem + 2px);
+	padding: .375rem .75rem;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #0079f2;
+	background-color: #c53535;
+	background-clip: padding-box;
+	border: 1px solid #4080bf;
+	border-radius: .25rem;
+	transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
